# aplus_mobile_fcm_server

./: .env_local  .gitignore  Dockerfile  README.md  batch_check_update.py  batch_config_local.yaml  crontab_local  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
app/: GAKUGUN_THREADS.py  admin.py  apis.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: notice.py  notice_register_gakugun.py  register_gakugun_threads.py
app/migrations/: 0001_initial.py
app/static/app/: notice_manage.js
app/templates/app/: auth_error.html  notice_manage_index.html  register_affiliation.html
fcm_server/: asgi.py  settings.py  urls.py  wsgi.py
