[tool.poetry]
name = "aplus-mobile-fcm-server"
version = "0.1.0"
description = "The FCM server for native apps."
authors = ["Takumi Tamura <tamutamuphone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2, <3.3"
fcm-django = "^2.0.0"
mysqlclient = "^2.1.1"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
